fatal error: acquiring lock DirtyCardQ_CBL_mon/16 out of order with lock Module_lock/6 -- possible deadlock

XMLWordPrintable

    • b143

      [rehn@rehn-ws bin]$ ./java -version
      java version "9-internal"
      Java(TM) SE Runtime Environment (slowdebug build 9-internal+0-2016-09-20-115159.rehn.vanilla-hs)
      Java HotSpot(TM) 64-Bit Server VM (slowdebug build 9-internal+0-2016-09-20-115159.rehn.vanilla-hs, mixed mode)
      [rehn@rehn-ws bin]$ ./javac -version
       Locks owned:
      Mutex: [0x00007fdbdc0143c0/0x0000000000000001] Module_lock - owner: 0x00007fdbdc019800
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/mutex.cpp:1333
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/rehn/source/jdk/vanilla-hs/hotspot/src/share/vm/runtime/mutex.cpp:1333), pid=23673, tid=23674
      # fatal error: acquiring lock DirtyCardQ_CBL_mon/16 out of order with lock Module_lock/6 -- possible deadlock
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (slowdebug build 9-internal+0-2016-09-20-115159.rehn.vanilla-hs)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 9-internal+0-2016-09-20-115159.rehn.vanilla-hs, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Core dump will be written. Default location: /var/cores/core.%e.%p.%h.%t
      #
      # An error report file with more information is saved as:
      # /home/rehn/source/jdk/vanilla-hs/build/linux-x86_64-normal-server-slowdebug/jdk/bin/hs_err_pid23673.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      Current thread is 23674
      Dumping core ...
      Aborted (core dumped)

            Assignee:
            Harold Seigel (Inactive)
            Reporter:
            Robbin Ehn
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: