8166364: fatal error: acquiring lock DirtyCardQ_CBL_mon/16 out of order with lock Module_lock/6 -- possible deadlock

Set the mirror's module field outside of the module lock.

Reviewed-by: dsamersoff, dholmes, rehn